# echo-text

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  docker-compose.local.yml  docker-compose.yml  test_llm_speed.py
backend/: .dockerignore  .env.example  Dockerfile  debug_investigate_recording.py  pyproject.toml  requirements.in  requirements.txt
backend/app/: __version__.py  backend_pre_start.py  main.py
backend/app/api/: deps.py
backend/app/core/: config.py  database.py  exception_handlers.py  exceptions.py  logging.py  (+4 more)
backend/migrations/: env.py
backend/scripts/: add_recording_settings_columns.py  add_silence_mode_columns.py  init_admin.py  prestart.sh
backend/tests/: _test_deepgram_api.py  conftest.py  reproduce_issue.py  test_arq_tasks.py  test_audio_processors.py  test_audio_saver.py  test_audio_utils.py  test_auth.py  test_balance.py  test_config_api.py  test_custom_url_config.py  test_deps.py  test_exceptions.py  test_export_api.py  test_export_service.py  test_export_v2.py  test_fireworks_performance.py  test_large_object.py  test_llm_context.py  test_llm_no_think.py  test_llm_service.py  test_logging.py  test_main_app.py  test_new_recording_config_api.py  test_ordered_translation_sender.py  test_processor_integration.py  test_prompts.py  test_providers_api.py  test_recordings_crud.py  test_recordings_isolation.py  test_security.py  test_segment_builder.py  test_sentence_builder.py  test_share.py  test_share_url.py  test_simulated.py  test_stt_registry.py  test_stt_service_unit.py  test_tasks.py  test_transcript_persistence.py  (+16 more)
(+131 files in other folders)
